tests/invalid/include_cycle_search.c
#include "cycle1.h"
int main() { return 0; }
